--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="iv_poster_movie_details">Poster</string>
     <string name="tv_synopsis_movie_details">Synopsis</string>
     <string name="iv_back_movie_details">Back</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tv_fragment_upcoming">Upcoming</string>
+    <string name="tv_fragment_now_playing">Now Playing</string>
 </resources>
